manifests/testing.yaml
# Source: hello-world/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
        helm.sh/chart: hello-world-0.1.0
        app.kubernetes.io/name: hello-world
        app.kubernetes.io/instance: hello-world
        app.kubernetes.io/version: "0.1.0"
        app.kubernetes.io/managed-by: Helm
  name: hello-world
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world
      app.kubernetes.io/instance: hello-world
  strategy: {}
  template:
    metadata:
      labels:
        helm.sh/chart: hello-world-0.1.0
        app.kubernetes.io/name: hello-world
        app.kubernetes.io/instance: hello-world
        app.kubernetes.io/version: "0.1.0"
        app.kubernetes.io/managed-by: Helm
        app: helloworld
    spec:
      containers:
        - image: "souheilbenslama/flask_helloworld:latest"
          name: hello-world
          resources:
            limits:
              cpu: 500m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

status: {}
