manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: helloworld
  labels:
    app: helloworld
spec:
  selector:
    app: helloworld
  type: LoadBalancer
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
