manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: helloworld
spec:
  rules:
  - host: hello-world.tn
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: helloworld
              port:
                number: 5000
