manifests/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-pods
  namespace: helloworld
spec:
  podSelector:
    matchLabels:
      app: helloworld
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: helloworld
      ports:
        - port: 5000
